serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: shubh-service
spec:
  selector:
    app: shubh
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
